@@ -4,7 +4,6 @@ import com.faforever.client.config.ClientProperties;
 import com.faforever.client.fx.PlatformService;
 import com.faforever.client.i18n.I18n;
 import com.faforever.client.task.CompletableTask;
-import com.faforever.client.task.ResourceLocks;
 import com.faforever.commons.io.ByteCopier;
 import com.google.common.annotations.VisibleForTesting;
 import lombok.Getter;
@@ -19,6 +18,7 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Files;
@@ -57,7 +57,7 @@ public class DownloadMapGeneratorTask extends CompletableTask<Void> {
 
     updateTitle(i18n.get("game.mapGeneration.downloadGenerator.title", version));
 
-    URL url = new URL(String.format(clientProperties.getMapGenerator().getDownloadUrlFormat(), version));
+    URL url = URI.create(String.format(clientProperties.getMapGenerator().getDownloadUrlFormat(), version)).toURL();
 
     URLConnection urlConnection = url.openConnection();
 
@@ -65,7 +65,6 @@ public class DownloadMapGeneratorTask extends CompletableTask<Void> {
     Files.createDirectories(targetFile.getParent());
     Path tempFile = Files.createTempFile(targetFile.getParent(), "generator", null);
 
-    ResourceLocks.acquireDownloadLock();
     try (InputStream inputStream = url.openStream(); OutputStream outputStream = Files.newOutputStream(tempFile)) {
       ByteCopier.from(inputStream)
           .to(outputStream)
@@ -75,7 +74,6 @@ public class DownloadMapGeneratorTask extends CompletableTask<Void> {
 
       Files.move(tempFile, targetFile, StandardCopyOption.REPLACE_EXISTING);
     } finally {
-      ResourceLocks.freeDownloadLock();
       try {
         Files.deleteIfExists(tempFile);
       } catch (IOException e) {
